# meshpy

./: LICENSE  README.md  pyproject.toml  setup.py
.binder/: Dockerfile  start
.github/workflows/: documentation.yml  github-pages.yml  testing.yml  website.yml
examples/utils/: example_1_utils.py  general_utils.py
src/meshpy/: __init__.py
src/meshpy/abaqus/: __init__.py  beam.py  input_file.py
src/meshpy/core/: __init__.py  base_mesh_item.py  boundary_condition.py  conf.py  container.py  coupling.py  element.py  element_beam.py  element_volume.py  geometry_set.py  material.py  mesh.py  mesh_utils.py  node.py  nurbs_patch.py  rotation.py  vtk_writer.py
src/meshpy/cosserat_curve/: __init__.py  cosserat_curve.py  warping_along_cosserat_curve.py
src/meshpy/four_c/: __init__.py  beam_potential.py  boundary_condition.py  dbc_monitor.py  element_beam.py  element_volume.py  function.py  function_utility.py  header_functions.py  input_file.py  locsys_condition.py  material.py  run_four_c.py  (+1 more)
tests/: __init__.py  conftest.py  conftest_result_comparison.py  create_cubit_input.py  test_abaqus.py  test_cosserat_curve.py  test_create_cubit_input.py  test_examples.py  test_four_c.py  test_four_c_simulation.py  test_function_utilities.py  test_geometric_search.py  test_header_functions.py  test_input_file_utils.py  test_mesh_creation_functions.py  test_meshpy.py  test_nurbs.py  test_performance.py  test_rotations.py  test_space_time.py  test_utility.py
tests/reference-files/: test_cosserat_curve_mesh_warp_transform_boundary_conditions.4C.yaml  test_four_c_beam_to_solid.4C.yaml
tutorial/: tutorial.py
(+28 files in other folders)
