[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["meshpy"]

[project]
name = "MeshPy"
description = "MeshPy: A beam finite element input generator"
authors = [{ name = "MeshPy Authors" }]
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "autograd",
  "geomdl",
  "ipykernel",
  "notebook",
  "numpy",
  "numpy-quaternion",
  "pyvista",
  "pyvista_utils@git+https://github.com/isteinbrecher/pyvista_utils.git@main",
  "scipy",
  "splinepy",
  "vtk"
]

[project.scripts]
compile-cython = "meshpy.geometric_search.compile_cython:compile_cython"

[project.optional-dependencies]
cubitpy = ["cubitpy@git+https://github.com/imcs-compsim/cubitpy.git@main"]
cython = ["cython"]
dev = [
  "coverage-badge",
  "coverage",
  "pdoc",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "testbook"
]

[project.urls]
Homepage = "https://imcs-compsim.github.io/meshpy/"
Documentation = "https://imcs-compsim.github.io/meshpy/api-documentation/"
Repository = "https://github.com/imcs-compsim/meshpy/"
Issues = "https://github.com/imcs-compsim/meshpy/issues/"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p pytest_cov --cov-report=term --cov-report=html --cov-fail-under=90 --cov=src/meshpy/ --cov-append"
markers = [
  "fourc: tests in combination with 4C",
  "arborx: tests in combination with ArborX",
  "cubitpy: tests in combination with CubitPy",
  "performance: performance tests of MeshPy"
]
